tests/baselines/reference/overloadingStaticFunctionsInFunctions.errors.txt
==== tests/cases/compiler/overloadingStaticFunctionsInFunctions.ts (14 errors) ====
    function boo {
                 ~
!!! overloadingStaticFunctionsInFunctions.ts(1,14): error TS1005: '(' expected.
      static test()
      ~~~~~~
!!! overloadingStaticFunctionsInFunctions.ts(2,3): error TS1008: Unexpected token; 'statement' expected.
             ~~~~
!!! overloadingStaticFunctionsInFunctions.ts(2,10): error TS2095: Could not find symbol 'test'.
      static test(name:string)
      ~~~~~~
!!! overloadingStaticFunctionsInFunctions.ts(3,3): error TS1008: Unexpected token; 'statement' expected.
                      ~
!!! overloadingStaticFunctionsInFunctions.ts(3,19): error TS1005: ',' expected.
             ~~~~
!!! overloadingStaticFunctionsInFunctions.ts(3,10): error TS2095: Could not find symbol 'test'.
                  ~~~~
!!! overloadingStaticFunctionsInFunctions.ts(3,15): error TS2095: Could not find symbol 'name'.
                       ~~~~~~
!!! overloadingStaticFunctionsInFunctions.ts(3,20): error TS2095: Could not find symbol 'string'.
      static test(name?:any){ }
      ~~~~~~
!!! overloadingStaticFunctionsInFunctions.ts(4,3): error TS1008: Unexpected token; 'statement' expected.
                       ~
!!! overloadingStaticFunctionsInFunctions.ts(4,20): error TS1003: Identifier expected.
                            ~
!!! overloadingStaticFunctionsInFunctions.ts(4,25): error TS1005: ';' expected.
             ~~~~
!!! overloadingStaticFunctionsInFunctions.ts(4,10): error TS2095: Could not find symbol 'test'.
                  ~~~~
!!! overloadingStaticFunctionsInFunctions.ts(4,15): error TS2095: Could not find symbol 'name'.
                        ~~~
!!! overloadingStaticFunctionsInFunctions.ts(4,21): error TS2095: Could not find symbol 'any'.
    }